fix spacing of stacked buttons

--- a/web/themes/custom/citizen_dart/components/04-units/nodes/general-page/_general-page.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/general-page/_general-page.scss
@@ -561,6 +561,7 @@
           @include button;
           color:white;
           border-color:white;
+          margin-bottom:1rem;
           margin-right:2rem;
           &:hover{
             color:black;
